# teo-bimanipulation

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
cmake/: CMakeLists.txt  TEO_BIMANIPULATIONDescribe.cmake  TEO_BIMANIPULATIONDoc.cmake  TEO_BIMANIPULATIONOptions.cmake  TEO_BIMANIPULATIONPackage.cmake  TEO_BIMANIPULATIONSystem.cmake  TEO_BIMANIPULATIONVersion.cmake
cmake/templates/: TEO_BIMANIPULATIONConfig.cmake.in
doc/: Doxyfile  groups.dox  main.dox
libraries/: CMakeLists.txt
libraries/ExampleLibrary/: CMakeLists.txt  ExampleLibrary.cpp  ExampleLibrary.hpp
libraries/StaticLibrary/: CMakeLists.txt  StaticLibrary.cpp  StaticLibrary.hpp
openrave/: CMakeLists.txt  teoSim-tray
openrave/teo/: teo.robot.xml  teo_head.kinbody.xml  teo_leftArm.kinbody.xml  teo_leftLeg.kinbody.xml  teo_rightArm.kinbody.xml  teo_rightHand.kinbody.xml  teo_rightLeg.kinbody.xml  teo_trunk.kinbody.xml
openrave/teo/models/: hand_frontal_wrist.wrl
programs/: CMakeLists.txt
programs/BalanceTray/: BalanceThread.cpp  BalanceThread.hpp  BalanceTray.cpp  BalanceTray.hpp  BodyExecution.hpp.autosave  CMakeLists.txt  DialogueManager.cpp  DialogueManager.hpp  TrajectoryThread.cpp  TrajectoryThread.hpp  main.cpp
programs/BodyExecution/: BodyExecution.cpp  BodyExecution.hpp  CMakeLists.txt  main.cpp
programs/balanceTray/: BalanceThread.cpp  BalanceThread.hpp  BalanceTray.cpp  BalanceTray.hpp  CMakeLists.txt  DialogueManager.cpp  DialogueManager.hpp  TrajectoryThread.cpp  TrajectoryThread.hpp  main.cpp
programs/exampleProgram/: CMakeLists.txt  ExampleProgram.cpp  ExampleProgram.hpp  main.cpp
scripts/admin/: update-dox.sh
scripts/bash/: teoSim-tray.sh
scripts/gnome/: teo-bimanipulation.desktop
scripts/package/: make_package.bat  make_package.sh
scripts/python/: trayCentroid.py
share/: CMakeLists.txt
share/openrave/teo/: teo_leftHand.kinbody.xml  teo_leftLeg.kinbody.xml  teo_rightLeg.kinbody.xml
share/openrave/teo/models/: hand_phalange_distal.wrl  hand_phalange_proximal.wrl
